customize section header

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
 
 <div class="container" style="padding:20px;">
   <div id="skills" class="section scrollspy">
-   <h3 style="text-align:center;">Tools and Experience</h3>
+   <h3 style="text-align:center;">What is under my sleeve</h3>
    {% include skills.html %}
  </div>
 </div>
@@ -58,14 +58,14 @@
 
 <div class="container" style="padding:20px;">
   <div id="blog" class="section scrollspy">
-  <h3 style="text-align:center;">Blog</h3>
+  <h3 style="text-align:center;">What is find amusing</h3>
   {% include blog-feed.html %}
 </div>
 </div>
 
 <div class="container" style="padding:20px;">
   <div id="contact" class="section scrollspy">
-  <h3 style="text-align:center;">Contact</h3>
+  <h3 style="text-align:center;">Mail me maybe</h3>
   {% include contact.html %}
 </div>
 </div>
