--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,7 +58,7 @@
 
 <div class="container" style="padding:20px;">
   <div id="blog" class="section scrollspy">
-  <h3 style="text-align:center;">What is find amusing</h3>
+  <h3 style="text-align:center;">What interest me</h3>
   {% include blog-feed.html %}
 </div>
 </div>
