--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
 
 <div class="container" style="padding:20px;">
   <div id="skills" class="section scrollspy">
-   <h3 style="text-align:center;">What is under my sleeve</h3>
+   <h3 style="text-align:center;">What used before</h3>
    {% include skills.html %}
  </div>
 </div>
@@ -58,14 +58,14 @@
 
 <div class="container" style="padding:20px;">
   <div id="blog" class="section scrollspy">
-  <h3 style="text-align:center;">What interest me</h3>
-  {% include blog-feed.html %}
+  <h3 style="text-align:center;">What do i like</h3>
+  <!-- {% include blog-feed.html %} -->
 </div>
 </div>
 
 <div class="container" style="padding:20px;">
   <div id="contact" class="section scrollspy">
-  <h3 style="text-align:center;">Mail me maybe</h3>
+  <h3 style="text-align:center;">How to reach me</h3>
   {% include contact.html %}
 </div>
 </div>
