--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -56,12 +56,12 @@
   </div>
 
 
-<div class="container" style="padding:20px;">
+<!-- <div class="container" style="padding:20px;">
   <div id="blog" class="section scrollspy">
   <h3 style="text-align:center;">What do i like</h3>
-  <!-- {% include blog-feed.html %} -->
+  {% include blog-feed.html %}
 </div>
-</div>
+</div> -->
 
 <div class="container" style="padding:20px;">
   <div id="contact" class="section scrollspy">
