--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -36,7 +36,7 @@
 
 <div class="container" style="padding:20px;">
   <div id="skills" class="section scrollspy">
-   <h3 style="text-align:center;">What used before</h3>
+   <h3 style="text-align:center;">Things that i come accross</h3>
    {% include skills.html %}
  </div>
 </div>
