--- a/_includes/portfolio_cards.html
+++ b/_includes/portfolio_cards.html
@@ -1,3 +1,6 @@
+{% for item in site.projects %}
+  {{ item }}
+{% endfor %}
 <div class="row">
   <div class="col s12 m6">
     <div class="card medium sticky-action">
